[package]
name = "github-hook-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
once_cell = "1.18"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
