[package]
name = "github-hook-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
regex = "1.9"
tracing = "0.1"
base64 = "0.22.1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
