[package]
name = "github-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4"
hmac = "0.12"
lambda_http = "0.14.0"
regex = "1.9"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
url = "2.5"

aws-config = { version = "1.6.3", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-kms = "1.71.0"
